# xcode

./: .env.example  .gitignore  AGENTS.md  README.md  code_law.md  pyproject.toml
artifacts/: tmp-read-large.txt
docs/lessons/: development-lessons.md  openai-agents-sdk-notes.md
docs/specs/: bash-tool.md  context-layering.md  file-edit-safety.md  read-only-tools.md  runtime-structure.md  session.md  todo-tool.md  tool-coordination-layer.md  tool-response-protocol.md
scripts/: __init__.py  cli.py
skills/code-review/: SKILL.md
skills/repo-explore/: SKILL.md
src/: __init__.py
src/context/: __init__.py  compaction.py  context_builder.py  file_mentions.py
src/hooks/: __init__.py  builtins.py  model.py  registry.py
src/permissions/: __init__.py  engine.py  model.py  settings.py
src/protocol/: __init__.py  tool_response.py
src/runtime/: __init__.py  agent_factory.py  config.py  events.py  paths.py  runner.py  session.py  tracing.py
src/tasks/: __init__.py  agent_team.py  background.py  subagent.py  task_graph.py  task_store.py  worktrees.py
src/tools/: __init__.py  bash_tool.py  common.py  compaction_tool.py  edit_write.py  read_only.py  registry.py  skill_loader.py  skill_tool.py  task_tools.py  team_tools.py  todo_write.py  worktree_tools.py
tests/: test_agent_factory.py  test_bash_tool.py  test_cli.py  test_config.py  test_context_builder.py  test_file_edit_tools.py  test_read_only_tools.py  test_runner.py  test_session.py  test_todo_tool.py  test_tool_response_protocol.py
tui/: package-lock.json  package.json  tsconfig.json
tui/src/: index.tsx  (+3 more)
