[project]
name = "xx-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.29.0",
    "openai-agents>=0.13.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = []
